# 3dPrintPilot

./: .gitignore  AGENTS.md  PROJECT_PLAN.md  README.md  RULES.md  alembic.ini  compose.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: verlyn-pr-gate.yml
.verlyn/: runtime_context.json  workflow_pack.json
.verlyn/agent-skills/: verlyn-public-cli.md
Documentation/: ANALYSIS_REPORT_DISPOSITIONS.md  OPERATIONS.md
Documentation/architecture/: bambu-roadmap.md  moonraker-agent.md  printer-plugin-contract.md
Documentation/examples/: printpilot.env.example
Documentation/guides/: VERLYN_AGENT_WORKFLOW.md  VERLYN_PUBLIC_CLI.md
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/core/: __init__.py  config.py  database.py  secrets.py
backend/db/: __init__.py
docs/: printer-protocol-discovery.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
local_ai_accounting/: __init__.py  estimate.py  models.py  openai_admin_client.py  pricing.py  reconcile.py  reports.py  storage.py
scripts/: bootstrap-owner.py  check-runtime.sh  install-system-service.sh  install-user-service.sh  install-web-proxy.sh  site-auth-browser-link.mjs  start-user-service.sh
tests/: helpers.py  test_ai_accounting.py  test_api_foundation.py  test_auth.py  test_compatibility_rules.py  test_db_models.py  test_models.py  test_printables_adapter.py  test_printers.py  test_provider_secrets.py  test_resources.py  test_runtime_foundation.py  test_site_auth_profiles.py  test_site_scanning.py  test_source_site_throttler.py
(+201 files in other folders)
