[project]
name = "3dprintpilot"
version = "0.1.0"
description = "Local-first 3D printer compatibility dashboard with LAN printer discovery and AI usage accounting."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "bcrypt>=4.1",
    "cryptography>=49.0.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
    "zeroconf>=0.132",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]
geometry = [
    "numpy-stl>=3.1",
    "trimesh>=4.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
